--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,13 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  datasource:
+#    url: db-bongdari.cpijvq4ngvyo.ap-northeast-2.rds.amazonaws.com
+    url: jdbc:mysql://db-bongdari.cpijvq4ngvyo.ap-northeast-2.rds.amazonaws.com:3306/jwtest?user=admin&password=bongdari
+    username: admin
+    password: bongdari
+    driver-class-name: com.mysql.jdbc.Driver
+    #    initialization-mode: always
 logging:
   level:
     org:
