--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
         format_sql: true
   datasource:
 #    url: db-bongdari.cpijvq4ngvyo.ap-northeast-2.rds.amazonaws.com
-    url: jdbc:mysql://db-bongdari.cpijvq4ngvyo.ap-northeast-2.rds.amazonaws.com:3306/jwtest?user=admin&password=bongdari
+    url: jdbc:mysql://db-bongdari.cpijvq4ngvyo.ap-northeast-2.rds.amazonaws.com:3306/jtest?user=admin&password=bongdari
     username: admin
     password: bongdari
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     #    initialization-mode: always
 logging:
   level:
